[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/entities/player.png" type="Texture" id=1]
[ext_resource path="res://scenes/entities/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 145.499, 509.21 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 77.0
height = 862.0

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FlipHelper:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack"
} ]
}

[node name="player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 2 )

[node name="FlipHelper" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="FlipHelper"]
texture = ExtResource( 1 )

[node name="AttackArea" type="Area2D" parent="FlipHelper"]
position = Vector2( 292.215, -1.7818 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlipHelper/AttackArea"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 0 )
shape = SubResource( 1 )

[node name="platform_detect" type="RayCast2D" parent="."]
position = Vector2( 0, 500 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 8

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 7680
limit_bottom = 2160
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="FlipHelper/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="FlipHelper/AttackArea" to="." method="_on_AttackArea_body_exited"]
